# blacklist-email

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  appspec.json  buildspec.yml  create-service.json  docker-compose.yml  pyproject.toml  requirements.txt  taskdef.json
.ebextensions/: 01_healthcheck.config  02_python.config  03_environment.config
src/: assembly.py  config.py  errors.py
src/adapters/models/: __init__.py  blacklist.py
src/adapters/repositories/: __init__.py  blacklist_repository.py
src/db/: base.py  session.py
src/domain/ports/: __init__.py  blacklist_repository.py
src/domain/schemas/: __init__.py  blacklist.py
src/domain/use_cases/: __init__.py  add_email_to_blacklist.py  base_use_case.py  check_email_in_blacklist.py
src/entrypoints/api/: dependencies.py  main.py
src/entrypoints/api/routers/: __init__.py  blacklist.py
src/tests/entrypoints/api/: test_blacklist_router.py
stress-tests/: blacklist-api.postman_collection.json  run-stress-tests.sh
